# erc20-workshop

./: .gitignore  README.md  lib.rs  run_tests.sh
erc20/: Cargo.toml  lib.rs
erc20_approval/: Cargo.toml  lib.rs
erc20_event/: Cargo.toml  lib.rs
